--- a/test.yml
+++ b/test.yml
@@ -1,6 +1,8 @@
-
 ---
 - hosts: all
   roles:
+    - role: andrewrothstein.miniconda
+      miniconda_make_sys_default: True
+      miniconda_cleanup: True
     - role: '{{playbook_dir}}'
       
