--- a/test.yml
+++ b/test.yml
@@ -5,4 +5,4 @@
       miniconda_make_sys_default: True
       miniconda_cleanup: True
     - role: '{{playbook_dir}}'
-      
+      conda_env_activate_for_login_shell: True
