up to v1.10.1. use conda pkg rather than pip. addl CI builds. dcb v0.0.16

--- a/airflow-environment.yml
+++ b/airflow-environment.yml
@@ -1,6 +1,6 @@
 ---
+channels:
+  - conda-forge
 dependencies:
   - python={{airflow_python_ver}}
-  - pip
-  - pip:
-      - apache-airflow=={{airflow_ver}}
+  - airflow={{airflow_ver}}
