--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,6 +3,8 @@ dependencies:
   version: v1.0.11
 - role: andrewrothstein.conda-env
   version: v2.0.7
+  conda_env_name: airflow
+  conda_env_environment: airflow-environment.yml
 galaxy_info:
   author: Andrew Rothstein
   company: PointState Capital
