--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,10 +1,10 @@
 dependencies:
 - role: andrewrothstein.gcc-toolbox
-  version: v1.0.11
-- role: andrewrothstein.conda-env
-  version: v2.0.7
+  version: v1.1.0
+- conda_env_environment: airflow-environment.yml
   conda_env_name: airflow
-  conda_env_environment: airflow-environment.yml
+  role: andrewrothstein.conda-env
+  version: v2.0.7
 galaxy_info:
   author: Andrew Rothstein
   company: PointState Capital
